init tsdoc config

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Vite App</title>
 </head>
 
+<!-- my grid layout -->
+<!-- https://grid.layoutit.com/?id=FWuablq -->
 <body>
   <div class="container">
     <svg id="main-svg" class="main-svg" viewbox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"></svg>
