improve grid layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 <!-- my grid layout -->
 <!-- https://grid.layoutit.com/?id=FWuablq -->
 <body>
+<!--   
+  The following div defines the dom structure necessary for the algo Visualizer
+  javascript component to function properly.
+-->
   <div class="container">
     <svg id="main-svg" class="main-svg" viewbox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"></svg>
+    <div class="algo-step-button"></div>
+    <div class="sudo-code-button"></div>
+    <div class="algo-step"></div>
+    <div class="sudo-code"></div>
+    <div class="control-button"></div>
+    <div class="controls"></div>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
