--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 
 <head>
@@ -18,7 +18,7 @@
   javascript component to function properly.
 -->
   <div class="container">
-    <svg id="main-svg" class="main-svg" viewbox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"></svg>
+    <svg id="main-svg" class="main-svg" viewbox="-500 0 1000 1000" viewport="" xmlns="http://www.w3.org/2000/svg"></svg>
     <div class="bottom-row flex-container">
       <div id="operations" class="bottom-row-items">
         <!-- TODO create either a flex box ui layout for the operation forms -->
@@ -53,8 +53,8 @@ does this by highlighting the corresponding line of sudo code.
 -->
 <template id="insert-sudo-code">
   <span id="insert-line1"><b>procedure</b> insert(value K, pointer P)<br></span>
-  &nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an empty leaf node L, which is also the
-  root<br>
+  <span id="insert-line2">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an empty leaf node L, which is also the
+  root<br></span>
   &nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that should contain key value K<br>
   &nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math display="inline">
     <mn>1</mn>
