add new highlight animations

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -61,7 +61,7 @@ does this by highlighting the corresponding line of sudo code.
     <mo>-</mo>
     <mi>n</mi>
   </math>. key values)<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node L<br>
+  <span id="insert-line5">&nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node L<br></span> 
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>else begin</b> L has <math display="inline">
     <mn>1</mn>
     <mo>-</mo>
