--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ does this by highlighting the corresponding line of sudo code.
   <span id="insert-line1"><b>procedure</b> insert(value K, pointer P)<br></span>
   <span id="insert-line2">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an empty leaf node L, which is also the
   root<br></span>
-  &nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that should contain key value K<br>
+  <span id="insert-line3">&nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that should contain key value K<br></span>
   <span id="insert-line4">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math display="inline">
     <mn>n</mn>
     <mo>-</mo>
