aadd code to place updated nodes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div id="operations" class="bottom-row-items">
         <!-- TODO create either a flex box ui layout for the operation forms -->
         <button id="insert-button" class="operation">insert</button>
+        <input type="checkbox" id="animation-toggle">
         <button id="delete-button" class="operation">delete</button>
         <button id="find-button" class="operation">find</button>
         <input type="text" name="number-input" id="number-input">
