work on undoable insert

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <input type="checkbox" id="animation-toggle">
         <button id="delete-button" class="operation">delete</button>
         <button id="find-button" class="operation">find</button>
+        <button id="back-button" class="operation">back</button>
+        <button id="forward-button" class="operation">forward</button>
         <input type="text" name="number-input" id="number-input">
       </div>
       <div class="bottom-row-items"></div>
