--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   javascript component to function properly.
 -->
   <div class="container">
-    <svg id="main-svg" class="main-svg" viewbox="-500 -50 1000 1000" viewport="" xmlns="http://www.w3.org/2000/svg">
+    <svg id="main-svg" class="main-svg" viewBox="-1000 -50 2000 2000" viewport="" xmlns="http://www.w3.org/2000/svg">
       <!-- <path class="edge" d="M 1 1 L 118 27" fill="none" id="edge-3-0" stroke="black" stroke-width="2px"
         marker-end="url(#arrow)" marker-start="url(#circle)" opacity="0" style="opacity: 1;"></path> -->
       <defs>
