continue debug delete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button id="find-button" class="operation">find</button>
         <button id="back-button" class="operation">back</button>
         <button id="forward-button" class="operation">forward</button>
-        <input type="text" name="number-input" id="number-input">
+        <input type="text" name="number-input" id="number-input" autocomplete="off">
       </div>
       <div class="bottom-row-items"></div>
       <div id="sudo-code" class="bottom-row-items">
