--- a/index.html
+++ b/index.html
@@ -49,20 +49,22 @@
       <div class="bottom-row-items"></div>
       <div id="sudo-code" class="bottom-row-items">
         <div id="insert-sudo-code" class="operation-sudo-code">
-          <span id="insert-line1"><b>procedure</b> insert(value K, pointer P)<br></span>
-          <span id="insert-line2">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an empty leaf node L, which
+          <div id="sudo-code-rectangle">
+          </div>
+          <span id="insert-line1" class="sudo-code-line"><b>procedure</b> insert(value K, pointer P)<br></span>
+          <span id="insert-line2" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an empty leaf node L, which
             is
             also
             the
             root<br></span>
-          <span id="insert-line3">&nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that should contain key value
+          <span id="insert-line3" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that should contain key value
             K<br></span>
-          <span id="insert-line4">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math display="inline">
+          <span id="insert-line4" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math display="inline">
               <mn>n</mn>
               <mo>-</mo>
               <mi>1</mi>
             </math>. key values)<br></span>
-          <span id="insert-line5">&nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node L<br></span>
+          <span id="insert-line5" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node L<br></span>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>else begin</b> L has <math display="inline">
             <mn>n</mn>
             <mo>-</mo>
