--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   javascript component to function properly.
 -->
   <div class="container">
-    <svg id="main-svg" class="main-svg" viewBox="-1000 -50 2000 2000" viewport="" xmlns="http://www.w3.org/2000/svg">
+    <svg id="main-svg" class="main-svg" viewBox="-500 -50 1000 1000" viewport="" xmlns="http://www.w3.org/2000/svg">
       <!-- <path class="edge" d="M 1 1 L 118 27" fill="none" id="edge-3-0" stroke="black" stroke-width="2px"
         marker-end="url(#arrow)" marker-start="url(#circle)" opacity="0" style="opacity: 1;"></path> -->
       <defs>
@@ -52,29 +52,41 @@
           <div id="sudo-code-rectangle">
           </div>
           <span id="insert-line1" class="sudo-code-line"><b>procedure</b> insert(value K, pointer P)<br></span>
-          <span id="insert-line2" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an empty leaf node L, which
+          <span id="insert-line2" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an
+            empty leaf node L, which
             is
             also
             the
             root<br></span>
-          <span id="insert-line3" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that should contain key value
+          <span id="insert-line3" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that
+            should contain key value
             K<br></span>
-          <span id="insert-line4" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math display="inline">
+          <span id="insert-line4" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math
+              display="inline">
               <mn>n</mn>
               <mo>-</mo>
               <mi>1</mi>
             </math>. key values)<br></span>
-          <span id="insert-line5" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node L<br></span>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>else begin</b> L has <math display="inline">
-            <mn>n</mn>
-            <mo>-</mo>
-            <mi>1</mi>
-          </math> already, split it into L and L'<br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Let K'
-          be the smallest key-value in L'<br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;insert_in_parent(L,
-          K', L')<br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>end</b><br>
+          <span id="insert-line5" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node
+            L<br></span>
+          <span id="insert-line6" class="sudo-code-line">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>else begin</b> L has <math display="inline">
+              <mn>n</mn>
+              <mo>-</mo>
+              <mi>1</mi>
+            </math> already, split it into L and L'<br>
+          </span>
+          <span id="insert-line7" class="sudo-code-line">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Let K'
+            be the smallest key-value in L'<br>
+          </span>
+          <span id="insert-line8" class="sudo-code-line">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;insert_in_parent(L,
+            K', L')<br>
+          </span>
+          <span id="insert-line9" class="sudo-code-line">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>end</b><br>
+          </span>
         </div>
         <div id="insert-parent-sudo-code" class="operation-sudo-code">
           <b>procedure</b> insert_in_parent(node N, value K', node N')<br>
@@ -112,6 +124,22 @@
     <div class="nav">
       <button id="play-button">play</button>
       <input type="range" id="timeline-input" name="timeline-input" min="0" max="1" value="0" step="0.01">
+      <div>
+        <input type="checkbox" name="speed" value="2" id="2x-checkbox">
+        <label for="2x-checkbox">2x</label>
+      </div>
+      <div>
+        <input type="checkbox" name="speed" value="4" id="4x-checkbox">
+        <label for="4x-checkbox">4x</label>
+      </div>
+      <div>
+        <input type="checkbox" name="speed" value="8" id="8x-checkbox">
+        <label for="8x-checkbox">8x</label>
+      </div>
+      <div>
+        <input type="checkbox" name="speed" value="1000" id="instant-checkbox">
+        <label for="8x-checkbox">instant</label>
+      </div>
     </div>
   </div>
   <script type="module" src="/src/main.ts"></script>
