--- a/index.html
+++ b/index.html
@@ -48,43 +48,40 @@
       </div>
       <div class="bottom-row-items"></div>
       <div id="sudo-code" class="bottom-row-items">
-        <div id="insert-sudo-code" class="operation-sudo-code">
+        <div id="insert-sudo-code" class="operation-sudo-code active">
           <div id="sudo-code-rectangle">
           </div>
           <span id="insert-line1" class="sudo-code-line"><b>procedure</b> insert(value K, pointer P)<br></span>
-          <span id="insert-line2" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty) create an
-            empty leaf node L, which
-            is
-            also
-            the
-            root<br></span>
-          <span id="insert-line3" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that
+          <span id="insert-line2" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (tree is empty)<br></span>
+          <span id="insert-line3" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;create an
+            empty leaf node <i>L</i>, which is also the root<br></span>
+          <span id="insert-line4" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>else</b> Find the leaf node L that
             should contain key value
             K<br></span>
-          <span id="insert-line4" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math
+          <span id="insert-line5" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>if</b> (L has less than <math
               display="inline">
               <mn>n</mn>
               <mo>-</mo>
               <mi>1</mi>
             </math>. key values)<br></span>
-          <span id="insert-line5" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node
+          <span id="insert-line6" class="sudo-code-line">&nbsp;&nbsp;&nbsp;&nbsp;<b>then</b> Insert in leaf node
             L<br></span>
-          <span id="insert-line6" class="sudo-code-line">
+          <span id="insert-line7" class="sudo-code-line">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>else begin</b> L has <math display="inline">
               <mn>n</mn>
               <mo>-</mo>
               <mi>1</mi>
             </math> already, split it into L and L'<br>
           </span>
-          <span id="insert-line7" class="sudo-code-line">
+          <span id="insert-line8" class="sudo-code-line">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Let K'
             be the smallest key-value in L'<br>
           </span>
-          <span id="insert-line8" class="sudo-code-line">
+          <span id="insert-line9" class="sudo-code-line">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;insert_in_parent(L,
             K', L')<br>
           </span>
-          <span id="insert-line9" class="sudo-code-line">
+          <span id="insert-line10" class="sudo-code-line">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>end</b><br>
           </span>
         </div>
