--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Vite App</title>
 </head>
 
+
 <!-- my grid layout -->
 <!-- grid.layoutit.com?id=rsXbSgO -->
 
@@ -28,9 +29,7 @@
         <button id="forward-button" class="operation">forward</button>
         <input type="text" name="number-input" id="number-input" autocomplete="off">
       </div>
-      <div class="sudo-code">
-        <!-- TODO figure out how to make sudo code look like I want. aligned to the grid on the right 
-        and bottom but free to expand on the left and top -->
+      <div class="sudo-code"> <!-- Used by the createSudoCodeRectangleObj method in algoVisualizer.ts -->
       </div>
       <div id="insert-sudo-code" class="operation-sudo-code sudo-code">
         <div id="insert-cursor" class="sudo-code-rectangle">
@@ -118,6 +117,7 @@
       </div>
     </div>
     <svg id="main-svg" class="main-svg" viewBox="-500 -50 1000 1000" viewport="" xmlns="http://www.w3.org/2000/svg">
+      <!-- test path elements -->
       <!-- <path class="edge" d="M 1 1 L 118 27" fill="none" id="edge-3-0" stroke="black" stroke-width="2px"
         marker-end="url(#arrow)" marker-start="url(#circle)" opacity="0" style="opacity: 1;"></path> -->
       <defs>
