--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button id="find-button" class="operation">find</button>
         <button id="back-button" class="operation">back</button>
         <button id="forward-button" class="operation">forward</button>
-        <input type="text" name="number-input" id="number-input" autocomplete="off">
+        <input type="text" name="number-input" id="number-input" autocomplete="off" value="6,4,5,2">
       </div>
       <div class="sudo-code"> <!-- Used by the createSudoCodeRectangleObj method in algoVisualizer.ts -->
       </div>
