--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         <!-- <path id="testPath" d="M-84,14.5C-84,84.5,-200.20000000000002,29,-200.20000000000002,79"></path> -->
         <marker id="circle" markerWidth="10" markerHeight="10" refX="5" refY="5" orient="auto"
           markerUnits="strokeWidth">
-          <circle cx="5" cy="5" r="2" fill="context-fill" />
+          <circle cx="5" cy="5" r="2" fill="context-stroke" />
         </marker>
         <marker id="arrow" viewBox="0 0 2 4" markerWidth="3" markerHeight="6" refX="2" refY="2" orient="auto">
-          <path d="M2 2L0 0V4L2 2Z" fill="context-fill" />
+          <path d="M2 2L0 0V4L2 2Z" fill="context-stroke" />
         </marker>
       </defs>
     </svg>
