--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <button id="find-button" class="operation">find</button>
         <button id="back-button" class="operation">back</button>
         <button id="forward-button" class="operation">forward</button>
-        <input type="text" name="number-input" id="number-input" autocomplete="off" value="6,4,5,2,8,9,10,11,12,13">
+        <input type="text" name="number-input" id="number-input" autocomplete="off" value="1,2,3,4,5,6">
+        <!-- test strings -->
+        <!-- 6,4,5,2,8,9,10,11,12,13 -->
       </div>
       <div class="sudo-code"> <!-- Used by the createSudoCodeRectangleObj method in algoVisualizer.ts -->
       </div>
