--- a/index.html
+++ b/index.html
@@ -120,13 +120,18 @@
     </div>
     <svg id="main-svg" class="main-svg" viewBox="-500 -50 1000 1000" viewport="" xmlns="http://www.w3.org/2000/svg">
       <!-- test path elements -->
-      <!-- <path class="edge" d="M 1 1 L 118 27" fill="none" id="edge-3-0" stroke="black" stroke-width="2px"
-        marker-end="url(#arrow)" marker-start="url(#circle)" opacity="0" style="opacity: 1;"></path> -->
+      <!-- <path class="edge" d="M 1 1 L 118 27" fill="none" id="edge-3-0" stroke="black" stroke-width="2px" -->
+      <!--   marker-end="url(#arrow)" marker-start="url(#circle)" opacity="0" style="opacity: 1;"></path> -->
       <defs>
-        <!-- <path class="edge" d="M-28,14.5C-28,84.5,100.10000000000001,29,100.10000000000001,79" fill="none" id="edge-3-1"
-          stroke="black" stroke-width="2px" marker-end="url(#arrow)" marker-start="url(#circle)" opacity="0"
-          style="opacity: 1;"></path> -->
+        <!-- * START Test Path Elements Section * ----------------------------------------->
+        <!-- <path class="edge" d="M-28,14.5C-28,84.5,100.10000000000001,29,100.10000000000001,79" fill="none" id="edge-3-1" -->
+        <!--   stroke="black" stroke-width="2px" marker-end="url(#arrow)" marker-start="url(#circle)" opacity="0" -->
+        <!--   style="opacity: 1;"></path> -->
         <!-- <path id="testPath" d="M-84,14.5C-84,84.5,-200.20000000000002,29,-200.20000000000002,79"></path> -->
+        <!-- <path class="edge" id="testPath2" d="M7,14.5C7,84.5,-295.75,179,-295.75,229" fill="none" stroke="black" -->
+        <!--   stroke-width="2px" opacity="1" pathLength="100000" stroke-dashoffset="0" stroke-dasharray="100000 0" -->
+        <!--   draw="0 1" marker-end="url(#arrow)" marker-start="url(#circle)"></path> -->
+        <!-- * END Test Path Elements Section * ---------------------------------------->
         <marker id="circle" markerWidth="10" markerHeight="10" refX="5" refY="5" orient="auto"
           markerUnits="strokeWidth">
           <circle cx="5" cy="5" r="2" fill="context-stroke" />
