continue leaf edge animation work

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@ sf
         <button id="find-button" class="operation">find</button>
         <button id="back-button" class="operation">back</button>
         <button id="forward-button" class="operation">forward</button>
-        <input type="text" name="number-input" id="number-input" autocomplete="off"
-          value="57, 91, 26, 73, 100, 101, 102, 103, 104, 105">
+        <input type="text" name="number-input" id="number-input" autocomplete="off" value="57, 91, 26, 73, 17, 45">
         <!-- test strings -->
         <!-- TODO debug this test case. when 13 is added edges should be aligned with nodes -->
         <!-- 6,4,5,2,8,9,10,11,12,13 -->
