continue undo work

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         <button id="find-button" class="operation">find</button>
         <button id="back-button" class="operation">back</button>
         <button id="forward-button" class="operation">forward</button>
-        <input type="text" name="number-input" id="number-input" autocomplete="off" value="6,4,5,2,8,9,10">
+        <!-- 
+        TODO this test string results in error when undoing and redoing last operation
+        -->
+        <input type="text" name="number-input" id="number-input" autocomplete="off" value="57, 91, 26, 73, 17, 45">
         <!-- test strings -->
         <!-- 6,4,5,2,8,9,10,11,12,13 -->
         <!-- 7,4,5 -->
