--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <button id="find-button" class="operation">find</button>
         <button id="back-button" class="operation">back</button>
         <button id="forward-button" class="operation">forward</button>
+        <!-- 
+        TODO this test string results in error when undoing and redoing last operation
+        -->
         <input type="text" name="number-input" id="number-input" autocomplete="off"
           value="57, 91, 26, 73, 17, 45, 67, 89, 34, 12, 78, 23, 56, 38, 81, 29, 64, 92, 15, 48, 71, 33, 86, 20, 52, 75, 28, 61, 94, 7, 40, 83, 16, 49, 72, 35, 58, 11, 44, 77, 30, 53, 76, 19, 42, 65, 88, 21, 54, 87, 10, 43, 66, 39, 62, 95, 18, 51">
         <!-- test strings -->
